--- a/package.json
+++ b/package.json
@@ -2,51 +2,39 @@
   "name": "2025_2_a4_code",
   "version": "1.0.0",
   "description": "Проект почта",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode development",
-    "lint": "eslint . --ext .js,.mjs,.cjs",
-    "lint:fix": "eslint . --ext .js,.mjs,.cjs --fix",
-    "prod": "node server.js",
-    "start": "node server.js",
     "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "handlebars": "^4.7.8"
-  },
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
-    "@eslint/js": "^9.36.0",
-    "babel-loader": "^9.2.1",
+    "@eslint/js": "^9.37.0",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
+    "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.4",
     "live-server": "^1.2.2",
     "nodemon": "^3.1.10",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.3",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
-  "directories": {
-    "doc": "docs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/frontend-park-mail-ru/2025_2_A4_Code.git"
-  },
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/frontend-park-mail-ru/2025_2_A4_Code/issues"
-  },
-  "homepage": "https://github.com/frontend-park-mail-ru/2025_2_A4_Code#readme"
+  "dependencies": {
+    "handlebars": "^4.7.8",
+    "normalize.css": "^8.0.1"
+  }
 }
