--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,25 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@app": ["app/index"],
+      "@app/*": ["app/*"],
+      "@pages": ["pages/index"],
+      "@pages/*": ["pages/*"],
+      "@features": ["features/index"],
+      "@features/*": ["features/*"],
+      "@shared": ["shared/index"],
+      "@shared/*": ["shared/*"],
+      "@entities": ["entities/index"],
+      "@entities/*": ["entities/*"],
+      "@infra": ["infra/index"],
+      "@infra/*": ["infra/*"],
+      "@utils": ["utils/index"],
+      "@utils/*": ["utils/*"],
+      "@app-types": ["types/index"],
+      "@app-types/*": ["types/*"]
+    },
     "outDir": "./dist",
     "rootDir": "./src",
     "declaration": true,
