--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.37.0",
     "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.37.0",
     "eslint-plugin-import": "^2.32.0",
