--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.37.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.4",
+    "image-minimizer-webpack-plugin": "^4.1.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
     "live-server": "^1.2.2",
+    "mini-css-extract-plugin": "^2.9.2",
     "nodemon": "^3.1.10",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.5",
